Introduce travis configuration using tox-travis

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,10 @@ minversion = 2.0
 envlist = py34-constraints,py27-constraints,pypy-constraints,pep8-constraints
 skipsdist = True
 
+[tox:travis]
+2.7 = py27-constraints
+3.4 = py34-constraints
+
 [testenv]
 usedevelop = True
 install_command =
