--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,14 @@ sudo: required
 dist: trusty
 language: python
 
-python:
-  - "2.7"
-  - "3.4"
+matrix:
+  include:
+  - python: "2.7"
+    env: TOX_ENV=py27
+  - python: "3.5"
+    env: TOX_ENV=py35
+  - python: "3.5"
+    env: TOX_ENV=pep8
 
 before_install:
   - sudo apt-get -qq update
@@ -13,7 +18,7 @@ before_install:
 install:
   - pip install tox-travis
 
-script: tox
+script: tox -e $TOX_ENV
 
 deploy:
   provider: pypi
